# Pipeline-Acidentes-de-Transito

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
data/bronze/: acidentes_de_transito_2015.parquet  acidentes_de_transito_2016.parquet  acidentes_de_transito_2017.parquet  acidentes_de_transito_2018.parquet  acidentes_de_transito_2019.parquet  acidentes_de_transito_2020.parquet  acidentes_de_transito_2021.parquet  acidentes_de_transito_2022.parquet  acidentes_de_transito_2023.parquet  acidentes_de_transito_2024.parquet
dbt_project/models/bronze/: bronze.yml
dbt_project/models/gold/: gold_acidentes_ano.sql  gold_pico_acidentes.sql
dbt_project/models/silver/: silver_acidentes.sql
reports/: relatorio.md
src/desafio_tech/: extract.py  load.py  script.py
