[project]
name = "desafio-tech"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Oliveira",email = "ruantos@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "desafio_tech", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
