[project]
name = "desafio-tech"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Oliveira",email = "ruantos@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "duckdb (>=1.4.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "desafio_tech", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
